@@ -56,6 +56,19 @@ public class ImportExportTests extends AbstractIntegrationTests {
     }
 
     @Test
+    @DisplayName("Given a named SuccessionAsUsage, when importing and exporting the model, then the exported text file should be the same as the imported one.")
+    public void checkNamedSuccessionAsUsageInActionDefinitionTest() throws IOException {
+        var input = """
+                action def A4 {
+                    action a1;
+                    action a2;
+                    succession s1 first a1 then a2;
+                }""";
+
+        this.checker.check(input, input);
+    }
+
+    @Test
     @DisplayName("Given a SuccessionAsUsage with an implicit source feature, when importing and exporting the model, then the exported text file should be the same as the imported one.")
     public void checkSuccessionAsUsageImplicitSourceTest() throws IOException {
         var input = """
